# example-build-systems-workshop

./: LICENSE  README.md
bad-practice/script-building/: build.sh
bad-practice/script-building/lib/: libsource.cpp
cmake/medium/: CMakeLists.txt
cmake/medium/lib/: CMakeLists.txt
cmake/medium/program/: CMakeLists.txt
cmake/medium/unit-tests/: CMakeLists.txt
cmake/more-complicated/: generate-eclipse-project.sh
cmake/more-complicated/cpp-sources/: CMakeLists.txt
cmake/more-complicated/cpp-sources/lib/: CMakeLists.txt
cmake/more-complicated/cpp-sources/program/: CMakeLists.txt
cmake/more-complicated/cpp-sources/unit-tests/: CMakeLists.txt
cmake/simple/: CMakeLists.txt
cmake/simple/include/: file1.hpp  file2.hpp
cmake/simple/src/: file1.cpp  file2.cpp  main.cpp
make/improved-make/: Makefile
make/simpliest-make/: Makefile
